# themed-icon-lookup

./: .gitignore  .travis.yml  Cargo.toml  til.pc
debian/: changelog  control  copyright  rules  til.install
src/: build.rs  ffi.rs  icon_lookup.rs  icon_name.rs  icon_theme.rs  lib.rs  macros.rs
tests/icons/big/: icon-theme.cache
tests/icons/hicolor/: index.theme
tests/icons/themed/: index.theme
